[gd_scene load_steps=13 format=3 uid="uid://d1hh31lpc0qp6"]

[ext_resource type="Script" path="res://card_game/playing_card/playing_card_display/playing_card_display.gd" id="1_ctuju"]
[ext_resource type="PackedScene" uid="uid://bnpua7ivul3vs" path="res://card_game/playing_card/playing_card_display/card_frame/card_frame.tscn" id="1_titw6"]
[ext_resource type="Theme" uid="uid://e72ukg4v02e7" path="res://card_game/playing_card/playing_card_display/card_display_theme.tres" id="2_7d3ug"]
[ext_resource type="PackedScene" uid="uid://brk2nqbiy5ofr" path="res://card_game/playing_card/playing_card_display/card_icon_row/card_icon_row.tscn" id="4_o5fv1"]
[ext_resource type="PackedScene" uid="uid://bhgmsspndgbym" path="res://card_game/playing_card/playing_card_display/card_picture/card_picture.tscn" id="5_58xf2"]
[ext_resource type="PackedScene" uid="uid://dhi813hsu46i6" path="res://card_game/playing_card/playing_card_display/card_icon/card_icon.tscn" id="6_yw3j3"]
[ext_resource type="Theme" uid="uid://bqxbmpg0ub86d" path="res://global_theme.tres" id="7_rn7rk"]

[sub_resource type="Animation" id="Animation_dicjk"]
resource_name = "FadeInAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o6ei0"]
resource_name = "FadeOutAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1c8rq"]
resource_name = "HighlightAnimation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(0.366022, 2.2974, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Card:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_88o15"]
resource_name = "RotateAnimation"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Card:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jare0"]
_data = {
"FadeInAnimation": SubResource("Animation_dicjk"),
"FadeOutAnimation": SubResource("Animation_o6ei0"),
"HighlightAnimation": SubResource("Animation_1c8rq"),
"RotateAnimation": SubResource("Animation_88o15")
}

[node name="PlayingCardDisplay" type="Node2D"]
script = ExtResource("1_ctuju")

[node name="Card" type="Node2D" parent="."]
rotation = 6.28319

[node name="CardFrame" parent="Card" instance=ExtResource("1_titw6")]

[node name="TitleLabel" type="Label" parent="Card"]
offset_left = -111.0
offset_top = -139.0
offset_right = 102.0
offset_bottom = -106.0
theme = ExtResource("2_7d3ug")
theme_type_variation = &"TitleLabel"
text = "Card Title"

[node name="TextLabel" type="RichTextLabel" parent="Card"]
offset_left = -137.0
offset_top = 56.0
offset_right = 142.0
offset_bottom = 142.0
theme = ExtResource("2_7d3ug")
bbcode_enabled = true
text = "Card Description"

[node name="ArchetypesRow" parent="Card" instance=ExtResource("4_o5fv1")]
position = Vector2(-122, -82)

[node name="CostRow" parent="Card" instance=ExtResource("4_o5fv1")]
position = Vector2(110, -169)
alignment = "Right"

[node name="ArchetypesTextLabel" type="Label" parent="Card"]
offset_left = -102.0
offset_top = -92.0
offset_right = -29.0
offset_bottom = -69.0
theme = ExtResource("2_7d3ug")
text = "(Card Type)"

[node name="CardPicture" parent="Card" instance=ExtResource("5_58xf2")]
position = Vector2(1, -9)

[node name="CardIcon" parent="Card" instance=ExtResource("6_yw3j3")]
position = Vector2(-116, 157)

[node name="StatsLabel" type="Label" parent="Card"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 52.0
offset_top = 149.0
offset_right = 119.0
offset_bottom = 172.0
grow_horizontal = 0
size_flags_horizontal = 8
theme = ExtResource("2_7d3ug")
text = "Card Stats"
horizontal_alignment = 2

[node name="IdLabel" type="Label" parent="Card"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = 167.0
offset_right = 42.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("2_7d3ug")
theme_override_font_sizes/font_size = 10
text = "(Unique ID)"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jare0")
}

[node name="OverlayTextNode" type="Node2D" parent="."]
visible = false
position = Vector2(0, 92)

[node name="Label" type="Label" parent="OverlayTextNode"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_rn7rk")
theme_type_variation = &"OverlayLabel"
text = "Overlay"

[node name="OverlayIconRow" parent="." instance=ExtResource("4_o5fv1")]
visible = false
position = Vector2(0, 172)

[connection signal="mouse_entered" from="Card/CardFrame" to="." method="_on_card_frame_mouse_entered"]
[connection signal="mouse_exited" from="Card/CardFrame" to="." method="_on_card_frame_mouse_exited"]
